src/index.css
/* ... */
:root[data-theme='dark'] footer .cheatsheet-link.nav-link {
  color: var(--bs-gray-400);
}

/* Blurred Text Styles */

.blurred-text {
  color: transparent;
  text-shadow: 0 0 15px var(--bs-gray-600);
}

:root[data-theme='dark'] .blurred-text {
  color: transparent;
  text-shadow: 0 0 15px var(--bs-gray-400);
}

/* Boostrap overrides */

h2 {
  font-size: 1.5rem;
  font-weight: 600;
  margin-bottom: 5px;
}

.btn:focus:not(:focus-visible) {
  outline: 0;
  box-shadow: none;
}

.btn-link {
  color: currentColor;
}

.alert-info {
  color: var(--bs-white);
  background-color: var(--bs-gray-800);
  border-color: var(--bs-gray-900);
}
.alert-info a {
  color: inherit;
}

.modal-header {
  background-color: var(--bs-gray-800);
  color: var(--bs-white);
}

.modal-header .btn-close,
:root[data-theme='dark'] .offcanvas-header .btn-close {
  background: transparent
    url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23fff%27%3e%3cpath d=%27M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z%27/%3e%3c/svg%3e')
    center/1em auto no-repeat;
}

.placeholder {
  background-color: var(--bs-gray-400);
}

/* Wallets Styles */

.wallets a.wallet-name {
  text-decoration: none;
  color: var(--bs-body-color);
}

.wallets a.wallet-name:hover {
  text-decoration: underline;
}

.wallets .btn.btn-outline-dark {
  padding: 0.25rem 1rem;
  font-weight: 500;
  border-color: rgba(222, 222, 222, 1);
}

/* Alpha Warning */

.warning-hint {
  font-size: 0.8rem;
}

.warning-card-wrapper {
  position: fixed;
  height: 100%;
  width: 100%;
  z-index: 1000;
  background: rgba(0, 0, 0, 0.2);
  backdrop-filter: blur(1px);
}

.warning-card {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 75%;
}

@media only screen and (min-width: 576px) {
  .warning-card {
    width: 50%;
  }
}

@media only screen and (min-width: 992px) {
  .warning-card {
    width: 25%;
  }
}

/* Onboarding */

.onboarding button {
  height: 3rem;
  width: 80%;
}

.btn:disabled:hover {
  cursor: not-allowed;
}

/* Account Overlay */

.accordion-header .accordion-button:not(.collapsed) {
  /* Disable coloring for expanded headers */
  color: var(--bs-black);
  background-color: transparent;
}

.accordion-header .accordion-button:not(.collapsed)::after {
  /* Disable coloring for expanded headers */
  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23212529%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e');
}

:root[data-theme='dark'] .accordion-header .accordion-button:not(.collapsed)::after {
  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23fff%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e');
}

/* Theme overrides */
:root[data-theme='dark'] {
  --bs-body-color-rgb: var(--bs-white);
  --bs-body-bg-rgb: 33, 37, 41;
  --bs-body-color: var(--bs-white);
  --bs-body-bg: var(--bs-gray-900);
  --bs-gray-dark: #16191c;
  --bs-black: #000;
}

:root[data-theme='dark'] .border-top,
:root[data-theme='dark'] .border-bottom,
:root[data-theme='dark'] .border-left,
:root[data-theme='dark'] .border-right,
:root[data-theme='dark'] .border {
  border-color: var(--bs-gray-800) !important;
}

:root[data-theme='dark'] a.nav-link.active {
  border-color: white !important;
}

:root[data-theme='dark'] .card {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark']
  .card:not(.border-success):not(.border-danger):not(.border-warning):not(.border-primary):not(.border-info) {
  border-color: var(--bs-gray-800) !important;
}

:root[data-theme='dark'] .btn-dark {
  background-color: var(--bs-gray-800);
  border-color: var(--bs-gray-800);
}

:root[data-theme='dark'] .btn-dark:hover {
  background-color: var(--bs-gray-dark);
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] .accordion-item {
  background: transparent !important;
  border-color: var(--bs-gray-800) !important;
}

:root[data-theme='dark'] .accordion-button,
:root[data-theme='dark'] .btn-outline-dark {
  color: var(--bs-white);
  background: transparent !important;
  border-color: var(--bs-gray-800);
}

:root[data-theme='dark'] .accordion-button.collapsed::after {
  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23fff%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e');
}

:root[data-theme='dark'] .btn-outline-dark:hover {
  background-color: var(--bs-gray-dark) !important;
  border-color: var(--bs-gray-dark) !important;
}

:root[data-theme='dark'] code {
  color: var(--bs-gray-300);
}

:root[data-theme='dark'] .offcanvas {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark'] .spinner-border {
  border-color: var(--bs-white) !important;
  border-right-color: transparent !important;
}

:root[data-theme='dark'] .modal-content {
  background-color: var(--bs-gray-900);
}

:root[data-theme='dark'] .modal-header,
:root[data-theme='dark'] .modal-footer {
  border-color: var(--bs-gray-800) !important;
}

:root[data-theme='dark'] .modal-header .btn-close {
  background-color: var(--bs-gray-900) !important;
}

:root[data-theme='dark'] .table,
:root[data-theme='dark'] .table > :not(:first-child) {
  border-color: var(--bs-gray-800) !important;
}
/* ... */

